[gd_scene load_steps=2 format=2]

[ext_resource path="res://TMREditor.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LabelRealizedText" type="Label" parent="MainContainer"]
margin_right = 1080.0
margin_bottom = 14.0
text = "Realized text:"

[node name="TextRealizedText" type="Label" parent="MainContainer"]
margin_top = 18.0
margin_right = 1080.0
margin_bottom = 32.0
size_flags_vertical = 1

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
margin_top = 36.0
margin_right = 1080.0
margin_bottom = 40.0

[node name="LabelTMR" type="Label" parent="MainContainer"]
margin_top = 44.0
margin_right = 1080.0
margin_bottom = 58.0
text = "Text Meaning Representation (TMR):"

[node name="TextTMR" type="RichTextLabel" parent="MainContainer"]
margin_top = 62.0
margin_right = 1080.0
margin_bottom = 464.0
size_flags_vertical = 3
text = "{}"

[node name="ButtonSendTMR" type="Button" parent="MainContainer"]
visible = false
margin_top = 459.0
margin_right = 1080.0
margin_bottom = 479.0
text = "Send TMR"

[node name="TextSelectedTokens" type="Label" parent="MainContainer"]
margin_top = 468.0
margin_right = 1080.0
margin_bottom = 482.0
size_flags_vertical = 1
text = "Selected Tokens:"

[node name="GridButtonsSelectedTokens" type="GridContainer" parent="MainContainer"]
margin_top = 486.0
margin_right = 1080.0
margin_bottom = 486.0
columns = 5

[node name="HSeparator2" type="HSeparator" parent="MainContainer"]
margin_top = 490.0
margin_right = 1080.0
margin_bottom = 494.0

[node name="TextAvailableTokens" type="Label" parent="MainContainer"]
margin_top = 498.0
margin_right = 1080.0
margin_bottom = 512.0
size_flags_vertical = 1
text = "Available Tokens:"

[node name="GridButtonsAvailableTokens" type="GridContainer" parent="MainContainer"]
margin_top = 516.0
margin_right = 1080.0
margin_bottom = 516.0
columns = 5

[node name="ButtonReset" type="Button" parent="MainContainer"]
margin_top = 520.0
margin_right = 1080.0
margin_bottom = 540.0
text = "Reset TMR"

[node name="HSeparator3" type="HSeparator" parent="MainContainer"]
margin_top = 544.0
margin_right = 1080.0
margin_bottom = 548.0

[node name="LabelConceptInfo" type="Label" parent="MainContainer"]
margin_top = 552.0
margin_right = 1080.0
margin_bottom = 566.0
text = "Concept info:"

[node name="TextConceptInfo" type="RichTextLabel" parent="MainContainer"]
margin_top = 570.0
margin_right = 1080.0
margin_bottom = 720.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.37
text = "Info"
